force-app/main/default/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <formula>IF ( AND ( Response_Date__c &gt;= DATE(2012,08,01), Response_Date__c &lt;= DATE(2013,07,31) ), &quot;2012/13&quot;, 
IF ( AND ( Response_Date__c &gt;= DATE(2013,08,01), Response_Date__c &lt;= DATE(2014,07,31) ), &quot;2013/14&quot;, 
IF ( AND ( Response_Date__c &gt;= DATE(2014,08,01), Response_Date__c &lt;= DATE(2015,07,31) ), &quot;2014/15&quot;,
IF ( AND ( Response_Date__c &gt;= DATE(2015,08,01), Response_Date__c &lt;= DATE(2016,07,31) ), &quot;2015/16&quot;,
IF ( AND ( Response_Date__c &gt;= DATE(2016,08,01), Response_Date__c &lt;= DATE(2017,07,31) ), &quot;2016/17&quot;,
IF ( AND ( Response_Date__c &gt;= DATE(2017,08,01), Response_Date__c &lt;= DATE(2018,07,31) ), &quot;2017/18&quot;,
IF ( AND ( Response_Date__c &gt;= DATE(2018,08,01), Response_Date__c &lt;= DATE(2019,07,31) ), &quot;2018/19&quot;, &quot;Error&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Form_Language__c</fullName>
        <label>Form Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Further_Comments__c</fullName>
        <label>Further Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_or_Classroom_Teacher__c</fullName>
        <label>Lead or Classroom Teacher</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_Possible_Score__c</fullName>
        <formula>IF ( AND ( TEXT(Q1_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q1_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) + 
IF ( AND ( TEXT(Q2_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q2_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) + 
IF ( AND ( TEXT(Q3_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q3_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) + 
IF ( AND ( TEXT(Q4_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q4_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) + 
IF ( AND ( TEXT(Q5_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q5_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) + 
IF ( AND ( TEXT(Q6_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q6_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) + 
IF ( AND ( TEXT(Q7_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q7_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) + 
IF ( AND ( TEXT(Q8_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q8_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) + 
IF ( AND ( TEXT(Q9_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q9_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) + 
IF ( AND ( TEXT(Q10_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q10_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) + 
IF ( AND ( TEXT(Q11_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q11_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Possible Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q01_Academic_Progress_Agree_S_Agree__c</fullName>
        <formula>IF(OR(TEXT(Q1_Answer__c)=&apos;Strongly Agree&apos;, TEXT(Q1_Answer__c)=&apos;Agree&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q01. Academic Progress Agree &amp; S/Agree</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q01_Academic_Progress_Score__c</fullName>
        <formula>IF( IF ( AND ( TEXT(Q1_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q1_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) = 0, 0,

CASE ( Q1_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) / IF ( AND ( TEXT(Q1_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q1_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q01. Academic Progress Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q02_Extra_Curricular_Score__c</fullName>
        <formula>IF( IF ( AND ( TEXT(Q2_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q2_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) = 0, 0, 

CASE ( Q2_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) / IF ( AND ( TEXT(Q2_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q2_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q02. Extra Curricular Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q03_Welcoming_Safe_Environment_Score__c</fullName>
        <formula>IF( IF ( AND ( TEXT(Q3_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q3_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) = 0, 0, 

CASE ( Q3_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) / IF ( AND ( TEXT(Q3_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q3_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q03. Welcoming &amp; Safe Environment Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q04_Look_Forward_to_School_Score__c</fullName>
        <formula>IF( IF ( AND ( TEXT(Q4_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q4_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) = 0, 0, 

CASE ( Q4_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) / IF ( AND ( TEXT(Q4_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q4_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q04. Look Forward to School Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q05_School_Campus_Score__c</fullName>
        <formula>IF( IF ( AND ( TEXT(Q5_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q5_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) = 0, 0, 

CASE ( Q5_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) / IF ( AND ( TEXT(Q5_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q5_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q05. School Campus Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q06_Communication_Feedback_Score__c</fullName>
        <formula>IF( IF ( AND ( TEXT(Q6_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q6_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) = 0, 0, 

CASE ( Q6_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) / IF ( AND ( TEXT(Q6_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q6_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q06. Communication &amp; Feedback Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q07_Admin_Team_Score__c</fullName>
        <formula>IF( IF ( AND ( TEXT(Q7_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q7_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) = 0, 0, 

CASE ( Q7_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) / IF ( AND ( TEXT(Q7_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q7_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q07. Admin Team Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q08_Social_Opps_Score__c</fullName>
        <formula>IF( IF ( AND ( TEXT(Q8_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q8_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) = 0, 0, 

CASE ( Q8_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) / IF ( AND ( TEXT(Q8_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q8_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q08. Social Opps Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q09_Lunches_Score__c</fullName>
        <formula>IF( IF ( AND ( TEXT(Q9_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q9_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) = 0, 0, 

CASE ( Q9_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) / IF ( AND ( TEXT(Q9_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q9_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q09. Lunches Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q10_Answer__c</fullName>
        <label>Q10. Answer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                    <color>#33FF33</color>
                    <label>Strongly Agree</label>
                </value>
                <value>
                    <fullName>Agree</fullName>
                    <color>#FFFF66</color>
                    <label>Agree</label>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                    <color>#FF9900</color>
                    <label>Disagree</label>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                    <color>#FF0000</color>
                    <label>Strongly Disagree</label>
                </value>
                <value>
                    <fullName>No Opinion</fullName>
                    <color>#BBBBBB</color>
                    <label>No Opinion</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q10_Comments__c</fullName>
        <label>Q10. Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q10_Uniforms_Score__c</fullName>
        <formula>IF( IF ( AND ( TEXT(Q10_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q10_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) = 0, 0, 

CASE ( Q10_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) / IF ( AND ( TEXT(Q10_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q10_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q10. Uniforms Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q11_Answer__c</fullName>
        <label>Q11. Answer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                    <color>#33FF33</color>
                    <label>Strongly Agree</label>
                </value>
                <value>
                    <fullName>Agree</fullName>
                    <color>#FFFF66</color>
                    <label>Agree</label>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                    <color>#FF9900</color>
                    <label>Disagree</label>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                    <color>#FF0000</color>
                    <label>Strongly Disagree</label>
                </value>
                <value>
                    <fullName>No Opinion</fullName>
                    <color>#BBBBBB</color>
                    <default>true</default>
                    <label>No Opinion</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q11_Bus_Service_Score__c</fullName>
        <formula>IF( IF ( AND ( TEXT(Q11_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q11_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ) = 0, 0, 

CASE ( Q11_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) / IF ( AND ( TEXT(Q11_Answer__c) &lt;&gt; &quot;&quot;, TEXT(Q11_Answer__c) &lt;&gt; &quot;No Opinion&quot; ), 3, 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q11. Bus Service Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q11_Comments__c</fullName>
        <label>Q11. Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Answer__c</fullName>
        <label>Q1. Answer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                    <color>#33FF33</color>
                    <label>Strongly Agree</label>
                </value>
                <value>
                    <fullName>Agree</fullName>
                    <color>#FFFF66</color>
                    <label>Agree</label>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                    <color>#FF9900</color>
                    <label>Disagree</label>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                    <color>#FF0000</color>
                    <label>Strongly Disagree</label>
                </value>
                <value>
                    <fullName>No Opinion</fullName>
                    <color>#BBBBBB</color>
                    <default>true</default>
                    <label>No Opinion</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q1_Comments__c</fullName>
        <label>Q1. Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_to__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related to</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>Related_to__r.Company_School__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Year_Group_s__c</fullName>
        <formula>IF(
   Related_to__r.School__c = &quot;The New York International School&quot;,
   Related_to__r.Year_Groups_US__c,
   Related_to__r.Year_Groups_UK__c
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Year Group(s)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted by</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Score_Formula__c</fullName>
        <formula>CASE ( Q1_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) + 
CASE ( Q2_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) +
CASE ( Q3_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) +
CASE ( Q4_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) +
CASE ( Q5_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) +
CASE ( Q6_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) +
CASE ( Q7_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) +
CASE ( Q8_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) +
CASE ( Q9_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) +
CASE ( Q10_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 ) +
CASE ( Q11_Answer__c , &quot;Strongly Agree&quot;, 3, &quot;Agree&quot;, 2, &quot;Disagree&quot;, 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Score Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Score_Percent__c</fullName>
        <formula>IF ( Maximum_Possible_Score__c = 0, 0, Survey_Score_Formula__c /  Maximum_Possible_Score__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Score (Percent)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Survey_Score__c</fullName>
        <formula>TEXT(Survey_Score_Formula__c) &amp; &quot; out of &quot; &amp; TEXT( Maximum_Possible_Score__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Strongly Agree = 3pts
Agree = 2pts
Disagree = 1pt
Strongly Disagree = 0pts
(figures exclude unanswered questions i.e. those showing &quot;No Opinion&quot;)</inlineHelpText>
        <label>Survey Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_School_do_you_Work_For__c</fullName>
        <label>What School do you Work For?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>The British School of Guangzhou</fullName>
                </value>
                <value>
                    <fullName>The British School of Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>The British School of Nanjing</fullName>
                </value>
                <value>
                    <fullName>The British School of Navarra</fullName>
                </value>
                <value>
                    <fullName>The British School of Marbella</fullName>
                </value>
                <value>
                    <fullName>The British School of Tashkent</fullName>
                </value>
                <value>
                    <fullName>The British College of Sao Paulo</fullName>
                </value>
                <value>
                    <fullName>The International School of Moscow</fullName>
                </value>
                <value>
                    <fullName>The King&apos;s School Manila</fullName>
                </value>
                <value>
                    <fullName>King&apos;s College Beijing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Parent_Surveys</fullName>
        <columns>NAME</columns>
        <columns>Related_to__c</columns>
        <columns>Submitted_by__c</columns>
        <columns>Survey_Score__c</columns>
        <columns>Response_Date__c</columns>
        <columns>School__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Survey__c.Parent_Survey</value>
        </filters>
        <label>Parent Surveys</label>
    </listViews>
    <listViews>
        <fullName>Staff_Surveys</fullName>
        <columns>NAME</columns>
        <columns>Lead_or_Classroom_Teacher__c</columns>
        <columns>Department__c</columns>
        <columns>What_School_do_you_Work_For__c</columns>
        <columns>Response_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Staff Surveys</label>
    </listViews>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <recordTypes>
        <fullName>Parent_Survey</fullName>
        <active>true</active>
        <label>Parent Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_Survey</fullName>
        <active>true</active>
        <label>Staff Survey</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>